--- a/macos/.config/neofetch/config.conf
+++ b/macos/.config/neofetch/config.conf
@@ -6,20 +6,17 @@ print_info() {
 
     info "OS" distro
     info "Host" model
-    info "Kernel" kernel
     info "Uptime" uptime
     info "Packages" packages
     info "Shell" shell
     info "Resolution" resolution
     info "Terminal Font" term_font
-    info "CPU" cpu
-    info "GPU" gpu
     info "Memory" memory
+    info "CPU Usage" cpu_usage
     info "Battery" battery
     info "Public IP" public_ip
 
     # info "GPU Driver" gpu_driver  # Linux/macOS only
-    # info "CPU Usage" cpu_usage
     # info "Disk" disk
     # info "Font" font
     # info "Song" song
@@ -27,6 +24,7 @@ print_info() {
     # info "Local IP" local_ip
     # info "Users" users
     # info "Locale" locale  # This only works on glibc systems.
+		info cols
 }
 
 # Title
@@ -611,6 +609,7 @@ block_height=1
 # col_offset="auto" - Default behavior of neofetch
 # col_offset=7      - Leave 7 spaces then print the colors
 col_offset="auto"
+
 
 # Progress Bars
 
