--- a/macos/.config/neofetch/config.conf
+++ b/macos/.config/neofetch/config.conf
@@ -12,11 +12,11 @@ print_info() {
     info "Resolution" resolution
     info "Terminal Font" term_font
     info "Memory" memory
-    info "CPU Usage" cpu_usage
     info "Battery" battery
     info "Public IP" public_ip
 
     # info "GPU Driver" gpu_driver  # Linux/macOS only
+    # info "CPU Usage" cpu_usage
     # info "Disk" disk
     # info "Font" font
     # info "Song" song
