--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -11,9 +11,11 @@ cask "spotify"
 cask "steam"
 cask "transmission"
 cask "whatsapp"
+caks "runelite" # :)
 
-# LaTeX
+# LaTeX / Markdown
 cask "mactex-no-gui"
+brew "marked"
 cask "skim"
 
 # office
@@ -22,7 +24,7 @@ cask "microsoft-powerpoint"
 cask "microsoft-excel"
 cask "microsoft-teams"
 
-# formulae
+# other formulae
 brew "gnuplot"
 brew "python@3.10"
 brew "btop"
