--- a/macos/nvim/coc-settings.json
+++ b/macos/nvim/coc-settings.json
@@ -1,5 +1,8 @@
 {
   "diagnostic.virtualText": true,
-  "diagnostic.virtualTextCurrentLineOnly": false
-}
+  "diagnostic.virtualTextCurrentLineOnly": false,
 
+  "clangd.arguments": [
+    "--header-insertion=never"
+  ]
+}
