photography apps, remove stuff

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -3,7 +3,6 @@ cask "alacritty"
 cask "cyberduck"
 cask "discord"
 cask "disk-inventory-x"
-cask "gimp"
 cask "keepassxc"
 cask "librewolf"
 cask "spotify"
@@ -11,6 +10,11 @@ cask "steam"
 cask "transmission"
 cask "runelite" # :)
 cask "jellyfin-media-player"
+
+# Photography
+cask "darktable"
+cask "rawtherapee"
+cask "gimp"
 
 # LaTeX / Markdown
 cask "mactex-no-gui"
