rounded polybar corners, date instead of title module

--- a/linux/polybar/config.ini
+++ b/linux/polybar/config.ini
@@ -18,26 +18,24 @@ alpha = #00000000
 background = ${colors.bg}
 foreground = ${colors.fg}
 
-padding-right = 2
-padding-left = 0
-height = 3%
+offset-y = 1%
+radius = 10
+
+height = 3.8%
 module-margin = 0
 
 wm = bspwm
 wm-restack = bspwm
 override-redirect = true
 
-font-0 = Font Awesome 6 Free:pixelsize=15;3
-font-1 = CMU Typewriter Text:pixelsize=16;3
-font-2 = Font Awesome 6 Free Solid:pixelsize=15;3
-font-3 = Font Awesome 6 Brands:pixelsize=15;3
-
-; Define modules fot the bar
-; All modules need not be added here
+font-0 = Font Awesome 6 Free:pixelsize=18;3
+font-1 = CMU Typewriter Text:pixelsize=18;3
+font-2 = Font Awesome 6 Free Solid:pixelsize=18;3
+font-3 = Font Awesome 6 Brands:pixelsize=18;3
 
 modules-left = powermenu bspwm
-modules-center = title
-modules-right = pulseaudio backlight battery date
+modules-center = date
+modules-right = pulseaudio backlight battery
 
 [module/bspwm]
 type = internal/bspwm
@@ -79,24 +77,18 @@ label-separator-foreground = #ffb52a
 [module/date]
 type = internal/date
 
-; Seconds to sleep between updates
 interval = 1.0
 
-; See "http://en.cppreference.com/w/cpp/io/manip/put_time" for details on how to format the date string
-; NOTE: if you want to use syntax tags here you need to use %%{...}
-date = %{T1}%{T-}%{T2} %d/%a%{T-}
-
-; Optional time format
+;only display time by default
+date = 
 time = %{T2} %H:%M%{T-}
 
-; if `date-alt` or `time-alt` is defined, clicking
-; the module will toggle between formats
-date-alt = %{T1}%{T-}%{T2} %a, %d %b %y%{T-}
+date-alt = %{T2} %d %B %Y%{T-}
 time-alt = %{T2} %H:%M:%S%{T-}
 
 label = %date%%time%
 label-font = 0
-label-foreground = ${colors.green}
+label-foreground = ${colors.fg}
 
 [module/cpu]
 type = internal/cpu
