Better padding/margins on bar and modules

--- a/linux/polybar/config.ini
+++ b/linux/polybar/config.ini
@@ -18,24 +18,27 @@ alpha = #00000000
 background = ${colors.bg}
 foreground = ${colors.fg}
 
-offset-y = 1%
+offset-y = 1.5%
 radius = 10
 
 height = 3.8%
+width = 99%
+offset-x = 0.5%
 module-margin = 0
 
 wm = bspwm
 wm-restack = bspwm
 override-redirect = true
 
-font-0 = Font Awesome 6 Free:pixelsize=18;3
-font-1 = CMU Typewriter Text:pixelsize=18;3
-font-2 = Font Awesome 6 Free Solid:pixelsize=18;3
-font-3 = Font Awesome 6 Brands:pixelsize=18;3
+font-0 = Font Awesome 6 Free:pixelsize=18;4
+font-1 = CMU Typewriter Text:pixelsize=18;4
+font-2 = Font Awesome 6 Free Solid:pixelsize=18;4
+font-3 = Font Awesome 6 Brands:pixelsize=18;4
+font-4 = JetBrainsMonoNL Nerd Font Mono:pixelsize=28;6
 
 modules-left = powermenu bspwm
 modules-center = date
-modules-right = pulseaudio backlight battery
+modules-right = network pulseaudio battery
 
 [module/bspwm]
 type = internal/bspwm
@@ -90,68 +93,70 @@ label = %date%%time%
 label-font = 0
 label-foreground = ${colors.fg}
 
-[module/cpu]
-type = internal/cpu
-
-interval = 0.5
-
-label = %{T1}%{T-}%{T2}%percentage:2%%%{T-}
-
-label-foreground = ${colors.fg}
-
 [module/mpd]
 type = internal/mpd
 
-host = 0.0.0.0
+host = 127.0.0.1
 port = 6600
+interval = 1
 
-interval = 2
+format-online = <icon-prev> <icon-stop> <toggle> <icon-next>  <icon-repeat> <bar-progress> <label-time>  <label-song>
+format-playing = ${self.format-online}
+format-paused = ${self.format-online}
+format-stopped = ${self.format-online}
 
-format-online = <label-song>
-format-online-background = ${colors.bg}
-format-online-foreground = ${colors.fg-blue}
-#format-online-padding = 20
+label-song = %artist% - %title%
+label-time = %elapsed% / %total%
+label-offline = mpd is offline
 
-label-song =  %{T2}%artist% - %title%%{T-}
-label-song-maxlen = 55
-label-song-ellipsis = true
+icon-play = ⏵
+icon-pause = ⏸
+icon-stop = ⏹
+icon-prev = ⏮
+icon-next = ⏭
 
-label-offline = "MPD is offline"
+bar-progress-width = 45
+bar-progress-indicator = |
+bar-progress-fill = ─
+bar-progress-empty = ─
 
-[module/netspeed]
+[module/network]
 type = internal/network
 
-; Set correct interface name for the module to work
-; Try eth0 for ethernet or wlan0 for wireless
-;
-; You can also run ifconfig in a terminal
-; to know the interace names on your system.
 interface = wlan0
-interval = 1.0
-label-connected = "%{T1}龍%{T-}%{T2} v%downspeed% | ^%upspeed%%{T-}"
-label-disconnected = "%{T2}0/0%{T-}"
-label-connected-background = ${colors.bg}
+interface-type = wireless
+
+accumulate-stats = true
+unknown-as-up = true
+
+format-connected = <ramp-signal> <label-connected>
+format-disconnected = <label-disconnected>
+
+label-connected = %{T2}%downspeed%%{T-}
 label-connected-foreground = ${colors.fg}
+label-connected-padding-right = 1
+
+label-disconnected = %{T5}󰤭%{T-}
 label-disconnected-foreground = ${colors.red}
+label-disconnected-padding-right = 1
+
+ramp-signal-0 = %{T5}󰤯%{T-}
+ramp-signal-1 = %{T5}󰤟%{T-}
+ramp-signal-2 = %{T5}󰤢%{T-}
+ramp-signal-3 = %{T5}󰤥%{T-}
+ramp-signal-4 = %{T5}󰤨%{T-}
 
 [module/title]
 type = internal/xwindow
-; Available tags:
-;   <label> (default)
+
 format = <label>
 format-background = ${colors.bg}
 format-foreground = ${colors.fg}
 format-padding = 4
 
-; Available tokens:
-;   %title%
-; Default: %title%
 label = "%{T1}类%{T-}%{T2} %title%%{T-}"
 label-maxlen = 65
 
-; Used instead of label when there is no window title
-; Available tokens:
-;   None
 label-empty =%{T2}BSPWM%{T-}
 label-empty-foreground = {$colors.fg}
 
@@ -171,14 +176,17 @@ label-muted = 
 label-muted-foreground = ${colors.bg}
 label-muted-background = ${colors.red}
 label-muted-padding-right = 1
-label-muted-padding-left = 1
+label-muted-padding-left = 15px
 
 ramp-volume-0 = 
+ramp-volume-0-padding-right = 27px
 ramp-volume-1 = 
+ramp-volume-1-padding-right = 21px
 ramp-volume-2 = 🔊
+ramp-volume-2-padding-right = 12px
 ramp-volume-3 = 🔊
+ramp-volume-3-padding-right = 12px
 ramp-volume-padding-left = 1
-ramp-volume-padding-right = 1
 
 [module/backlight]
 type = internal/backlight
@@ -235,9 +243,10 @@ ramp-capacity-4 = 
 ramp-capacity-padding-left = 1
 
 animation-low-0 = 
+animation-low-0-padding-left = 15px
 animation-low-1 = 
+animation-low-1-padding-left = 1
 animation-low-framerate = 500
-animation-low-padding-left = 1
 animation-low-padding-right = 1
 
 [module/powermenu]
