music setup & padding fixing

--- a/linux/polybar/config.ini
+++ b/linux/polybar/config.ini
@@ -1,3 +1,5 @@
+include-directory = ./modules
+
 [colors]
 white=#f3ead3
 black=#5c6a72
@@ -26,6 +28,8 @@ width = 99%
 offset-x = 0.5%
 module-margin = 0
 
+enable-ipc = true
+
 wm = bspwm
 wm-restack = bspwm
 override-redirect = true
@@ -38,113 +42,8 @@ font-4 = JetBrainsMonoNL Nerd Font Mono:pixelsize=28;6
 
 modules-left = powermenu bspwm
 modules-center = date
-modules-right = network pulseaudio battery
+modules-right = network pulseaudio music-prev music-play-pause music-next music battery
 
-[module/bspwm]
-type = internal/bspwm
-
-enable-scroll = false
-
-ws-icon-default = "%{T1} 🌲 %{T-}"
-;ws-icon-0 = "I;%{T1} 🌲 %{T-}"
-;ws-icon-1 = "II;%{T1} 🌲 %{T-}"
-;ws-icon-2 = "III;%{T1} 🌲 %{T-}"
-;ws-icon-3 = "IV;%{T1} 🌲 %{T-}"
-
-format = <label-state> <label-mode>
-
-label-dimmed-foreground = #555
-label-dimmed-underline = ${bar/top.background}
-label-dimmed-focused-background = #f00
-
-label-focused = %icon%
-label-focused-foreground = ${colors.bg}
-label-focused-background = ${colors.fg}
-label-focused-underline = #fba922
-
-label-occupied = %icon%
-label-occupied-padding = 0
-label-occupied-foreground = ${colors.fg}
-
-label-urgent = %icon%
-label-urgent-foreground = ${colors.red}
-
-label-empty = %icon%
-label-empty-foreground = #55
-label-empty-padding = 0
-
-label-separator =
-label-separator-padding = 0
-label-separator-foreground = #ffb52a
-
-[module/date]
-type = internal/date
-
-interval = 1.0
-
-;only display time by default
-date = 
-time = %{T2} %H:%M%{T-}
-
-date-alt = %{T2} %d %B %Y%{T-}
-time-alt = %{T2} %H:%M:%S%{T-}
-
-label = %date%%time%
-label-font = 0
-label-foreground = ${colors.fg}
-
-[module/mpd]
-type = internal/mpd
-
-host = 127.0.0.1
-port = 6600
-interval = 1
-
-format-online = <icon-prev> <icon-stop> <toggle> <icon-next>  <icon-repeat> <bar-progress> <label-time>  <label-song>
-format-playing = ${self.format-online}
-format-paused = ${self.format-online}
-format-stopped = ${self.format-online}
-
-label-song = %artist% - %title%
-label-time = %elapsed% / %total%
-label-offline = mpd is offline
-
-icon-play = ⏵
-icon-pause = ⏸
-icon-stop = ⏹
-icon-prev = ⏮
-icon-next = ⏭
-
-bar-progress-width = 45
-bar-progress-indicator = |
-bar-progress-fill = ─
-bar-progress-empty = ─
-
-[module/network]
-type = internal/network
-
-interface = wlan0
-interface-type = wireless
-
-accumulate-stats = true
-unknown-as-up = true
-
-format-connected = <ramp-signal> <label-connected>
-format-disconnected = <label-disconnected>
-
-label-connected = %{T2}%downspeed%%{T-}
-label-connected-foreground = ${colors.fg}
-label-connected-padding-right = 1
-
-label-disconnected = %{T5}󰤭%{T-}
-label-disconnected-foreground = ${colors.red}
-label-disconnected-padding-right = 1
-
-ramp-signal-0 = %{T5}󰤯%{T-}
-ramp-signal-1 = %{T5}󰤟%{T-}
-ramp-signal-2 = %{T5}󰤢%{T-}
-ramp-signal-3 = %{T5}󰤥%{T-}
-ramp-signal-4 = %{T5}󰤨%{T-}
 
 [module/title]
 type = internal/xwindow
@@ -160,34 +59,6 @@ label-maxlen = 65
 label-empty =%{T2}BSPWM%{T-}
 label-empty-foreground = {$colors.fg}
 
-[module/pulseaudio]
-type = internal/pulseaudio
-
-format-volume = <ramp-volume>
-format-volume-background = ${colors.fg}
-format-volume-foreground = ${colors.bg}
-
-;label-volume = %{T2}%percentage%%{T-}
-;label-volume-padding-right = 1
-
-format-muted = <label-muted>
-
-label-muted = 
-label-muted-foreground = ${colors.bg}
-label-muted-background = ${colors.red}
-label-muted-padding-right = 1
-label-muted-padding-left = 15px
-
-ramp-volume-0 = 
-ramp-volume-0-padding-right = 27px
-ramp-volume-1 = 
-ramp-volume-1-padding-right = 21px
-ramp-volume-2 = 🔊
-ramp-volume-2-padding-right = 12px
-ramp-volume-3 = 🔊
-ramp-volume-3-padding-right = 12px
-ramp-volume-padding-left = 1
-
 [module/backlight]
 type = internal/backlight
 
@@ -198,68 +69,6 @@ format-foreground = ${colors.fg}
 label = %{T2} %percentage%%{T-}
 label-padding-left = 1
 label-padding-right = 1
-
-[module/battery]
-type = internal/battery
-
-full-at = 99
-low-at = 10
-
-battery = BAT0
-adapter = ADP1
-
-poll-interval = 1
-
-format-charging = <ramp-capacity> <label-charging>
-format-charging-background = ${colors.cyan}
-format-charging-foreground = ${colors.bg}
-
-format-discharging = <ramp-capacity> <label-discharging>
-format-discharging-background = ${colors.yellow}
-format-discharging-foreground = ${colors.bg}
-
-format-full = <ramp-capacity> <label-full>
-format-full-background = ${colors.green}
-format-full-foreground = ${colors.bg}
-
-format-low = <animation-low>
-format-low-background = ${colors.red}
-format-low-foreground = ${colors.bg}
-
-label-charging = %{T2}%percentage%%{T-}
-label-charging-padding-right = 1
-
-label-discharging = %{T2}%percentage%%{T-}
-label-discharging-padding-right = 1
-
-label-full = %{T2}Full!%{T-}
-label-full-padding-right = 1 
-
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
-ramp-capacity-padding-left = 1
-
-animation-low-0 = 
-animation-low-0-padding-left = 15px
-animation-low-1 = 
-animation-low-1-padding-left = 1
-animation-low-framerate = 500
-animation-low-padding-right = 1
-
-[module/powermenu]
-type = custom/text
-
-content = "⏻"
-content-background = ${colors.fg}
-content-foreground = ${colors.bg}
-content-padding = 1
-
-margin-right = 0
-
-click-left = ~/.config/rofi/powermenu.sh
 
 [module/checkupdates]
 type = custom/script
