disk space module

--- a/linux/polybar/config.ini
+++ b/linux/polybar/config.ini
@@ -42,7 +42,7 @@ font-4 = JetBrainsMonoNL Nerd Font Mono:pixelsize=28;6
 
 modules-left = powermenu bspwm
 modules-center = date
-modules-right = network pulseaudio music-prev music-play-pause music-next music battery
+modules-right = network pulseaudio music-prev music-play-pause music-next music disk battery
 
 
 [module/title]
