Remove rounded corners, module sections, general improvements

--- a/linux/polybar/config.ini
+++ b/linux/polybar/config.ini
@@ -5,6 +5,7 @@ white=#f3ead3
 black=#5c6a72
 blue = #3a94c5
 green = #8da101
+light-green = #e1e4bd
 red = #f85552
 cyan = #35a77c
 orange = #f57d26
@@ -20,13 +21,16 @@ alpha = #00000000
 background = ${colors.bg}
 foreground = ${colors.fg}
 
-offset-y = 1.5%
-radius = 10
+offset-y = 1.2%
+;radius = 10
 
-height = 3.8%
-width = 99%
-offset-x = 0.5%
+;width = 99%
+;offset-x = 0.5%
+
+height = 4.5%
 module-margin = 0
+
+line-size = 6px
 
 enable-ipc = true
 
@@ -42,33 +46,13 @@ font-4 = JetBrainsMonoNL Nerd Font Mono:pixelsize=28;6
 
 modules-left = powermenu bspwm
 modules-center = date
-modules-right = network pulseaudio music-prev music-play-pause music-next music disk battery
+modules-right = music-prev music-play-pause music-next music pulseaudio space disk network battery space
 
 
-[module/title]
-type = internal/xwindow
-
-format = <label>
-format-background = ${colors.bg}
-format-foreground = ${colors.fg}
-format-padding = 4
-
-label = "%{T1}类%{T-}%{T2} %title%%{T-}"
-label-maxlen = 65
-
-label-empty =%{T2}BSPWM%{T-}
-label-empty-foreground = {$colors.fg}
-
-[module/backlight]
-type = internal/backlight
-
-card = intel_backlight
-
-format = <label>
-format-foreground = ${colors.fg}
-label = %{T2} %percentage%%{T-}
-label-padding-left = 1
-label-padding-right = 1
+[module/space]
+type = custom/text
+content = " "
+content-padding = 0
 
 [module/checkupdates]
 type = custom/script
