--- a/linux/polybar/modules/battery.ini
+++ b/linux/polybar/modules/battery.ini
@@ -2,7 +2,7 @@
 type = internal/battery
 
 full-at = 99
-low-at = 10
+low-at = 15
 
 battery = BAT0
 adapter = ADP1
@@ -12,34 +12,42 @@ poll-interval = 1
 format-charging = <ramp-capacity> <label-charging>
 format-charging-background = ${colors.cyan}
 format-charging-foreground = ${colors.bg}
+format-charging-underline  = ${colors.bg} 
+format-charging-overline   = ${colors.bg} 
+format-charging-padding = 1
 
 format-discharging = <ramp-capacity> <label-discharging>
 format-discharging-background = ${colors.yellow}
 format-discharging-foreground = ${colors.bg}
+format-discharging-underline  = ${colors.bg} 
+format-discharging-overline   = ${colors.bg}
+format-discharging-padding = 1
 
 format-full = <ramp-capacity> <label-full>
 format-full-background = ${colors.green}
 format-full-foreground = ${colors.bg}
+format-full-underline  = ${colors.bg} 
+format-full-overline   = ${colors.bg} 
+format-full-padding = 1
 
 format-low = <animation-low>
 format-low-background = ${colors.red}
 format-low-foreground = ${colors.bg}
+format-low-underline  = ${colors.bg} 
+format-low-overline   = ${colors.bg} 
+format-low-padding = 1
 
 label-charging = %{T2}%percentage%%{T-}
-label-charging-padding-right = 1
 
 label-discharging = %{T2}%percentage%%{T-}
-label-discharging-padding-right = 1
 
 label-full = %{T2}Full!%{T-}
-label-full-padding-right = 1
 
 ramp-capacity-0 = 
 ramp-capacity-1 = 
 ramp-capacity-2 = 
 ramp-capacity-3 = 
 ramp-capacity-4 = 
-ramp-capacity-padding-left = 1
 
 animation-low-0 = 
 animation-low-0-padding-left = 15px
