--- a/linux/polybar/modules/bspwm.ini
+++ b/linux/polybar/modules/bspwm.ini
@@ -9,24 +9,26 @@ ws-icon-default = "%{T1} 🌲 %{T-}"
 ;ws-icon-2 = "III;%{T1} 🌲 %{T-}"
 ;ws-icon-3 = "IV;%{T1} 🌲 %{T-}"
 
-format = <label-state> <label-mode>
-
-label-dimmed-foreground = #555
-label-dimmed-underline = ${bar/top.background}
-label-dimmed-focused-background = #f00
+format = <label-state>
+format-foreground = ${colors.fg}
 
 label-focused = %icon%
+label-focused-padding = 0
 label-focused-foreground = ${colors.bg}
 label-focused-background = ${colors.fg}
-label-focused-underline = #fba922
+label-focused-underline = ${colors.bg}
+label-focused-overline = ${colors.bg}
 
 label-occupied = %icon%
 label-occupied-padding = 0
 label-occupied-foreground = ${colors.fg}
-
-label-urgent = %icon%
-label-urgent-background = ${colors.red}
+label-occupied-background = ${colors.bg}
+label-occupied-underline = ${colors.bg}
+label-occupied-overline = ${colors.bg}
 
 label-empty = %icon%
-label-empty-foreground = #55
 label-empty-padding = 0
+label-empty-foreground = #55
+label-empty-background = ${colors.bg}
+label-empty-underline = ${colors.bg}
+label-empty-overline = ${colors.bg}
