--- a/linux/polybar/modules/music.ini
+++ b/linux/polybar/modules/music.ini
@@ -7,6 +7,8 @@ format = %{T2}<label>%{T-}
 label-padding-right = 1
 label-foreground = ${colors.bg}
 label-background = ${colors.fg}
+label-overline = ${colors.bg}
+label-underline = ${colors.bg}
 exec = ~/.config/polybar/scripts/scroll_music_status.sh
 
 [module/music-prev]
@@ -19,6 +21,8 @@ format = <label>
 label-padding-left = 1
 label-foreground = ${colors.bg}
 label-background = ${colors.fg}
+label-overline = ${colors.bg}
+label-underline = ${colors.bg}
 
 click-left = playerctl previous
 
@@ -30,6 +34,8 @@ exec = ~/.config/polybar/scripts/get_music_playing.sh
 format = <label>
 label-foreground = ${colors.bg}
 label-background = ${colors.fg}
+label-overline = ${colors.bg}
+label-underline = ${colors.bg}
 
 click-left = playerctl play-pause
 
@@ -41,3 +47,5 @@ exec = if [[ -z $(playerctl -s -l) ]]; then echo ""; else echo "⏭ "; fi
 format = <label>
 label-foreground = ${colors.bg}
 label-background = ${colors.fg}
+label-overline = ${colors.bg}
+label-underline = ${colors.bg}
