--- a/linux/polybar/modules/network.ini
+++ b/linux/polybar/modules/network.ini
@@ -7,24 +7,27 @@ interface-type = wireless
 accumulate-stats = true
 unknown-as-up = true
 
-format-connected = <ramp-signal><label-connected>
+;format-connected = <ramp-signal><label-connected>
+format-connected = <ramp-signal>
+format-connected-overline   = ${colors.bg}
+format-connected-underline  = ${colors.bg}
+format-connected-background = ${colors.fg}
+format-connected-foreground = ${colors.bg}
+format-connected-padding = 1
+
 format-disconnected = <label-disconnected>
+format-disconnected-background = ${colors.red}
+format-disconnected-foreground = ${colors.bg}
+format-disconnected-underline  = ${colors.bg}
+format-disconnected-overline   = ${colors.bg}
+format-disconnected-padding = 1
 
 label-connected = %{T2}%downspeed%%{T-}
-label-connected-background = ${colors.fg}
-label-connected-foreground = ${colors.bg}
-label-connected-padding-right = 1
 
 label-disconnected = %{T5}󰤭%{T-}
-label-disconnected-background = ${colors.red}
-label-disconnected-foreground = ${colors.bg}
-label-disconnected-padding-right = 1
 
-ramp-signal-0 = %{T5}󰤯 %{T-}
-ramp-signal-1 = %{T5}󰤟 %{T-}
-ramp-signal-2 = %{T5}󰤢 %{T-}
-ramp-signal-3 = %{T5}󰤥 %{T-}
-ramp-signal-4 = %{T5}󰤨 %{T-}
-ramp-signal-padding-left = 1
-ramp-signal-background = ${colors.fg}
-ramp-signal-foreground = ${colors.bg}
+;ramp-signal-0 = %{T5}󰤯 %{T-}
+ramp-signal-0 = %{T5}󰤟%{T-}
+ramp-signal-1 = %{T5}󰤢%{T-}
+ramp-signal-2 = %{T5}󰤥%{T-}
+ramp-signal-3 = %{T5}󰤨%{T-}
