--- a/linux/polybar/modules/powermenu.ini
+++ b/linux/polybar/modules/powermenu.ini
@@ -2,8 +2,8 @@
 type = custom/text
 
 content = "⏻"
-content-background = ${colors.fg}
-content-foreground = ${colors.bg}
+content-background = ${colors.bg}
+content-foreground = ${colors.fg}
 content-padding= 2
 
 margin-right = 0
