--- a/linux/polybar/modules/volume.ini
+++ b/linux/polybar/modules/volume.ini
@@ -2,17 +2,21 @@
 type = internal/pulseaudio
 
 format-volume = <ramp-volume>
-format-volume-background = ${colors.bg}
-format-volume-foreground = ${colors.fg}
+format-volume-background = ${colors.fg}
+format-volume-foreground = ${colors.bg}
+format-volume-underline  = ${colors.bg}
+format-volume-overline   = ${colors.bg}
 
 ;label-volume = %{T2}%percentage%%{T-}
 ;label-volume-padding-right = 1
 
 format-muted = <label-muted>
+format-muted-foreground = ${colors.bg}
+format-muted-background = ${colors.red}
+format-muted-overline   = ${colors.bg}
+format-muted-underline  = ${colors.bg}
 
-label-muted = 
-label-muted-foreground = ${colors.red}
-label-muted-background = ${colors.bg}
+label-muted = 
 label-muted-padding-right = 1
 label-muted-padding-left = 15px
 
