--- a/linux/polybar/modules/disk.ini
+++ b/linux/polybar/modules/disk.ini
@@ -4,6 +4,8 @@ interval=60
 exec=echo " $(df -h | grep "/dev/sda2" | awk '{print $5}')"
 
 format=%{T2}<label>%{T-}
-label-foreground = ${colors.fg}
-label-background = ${colors.bg}
+label-foreground = ${colors.bg}
+label-background = ${colors.fg}
+label-underline  = ${colors.bg}
+label-overline   = ${colors.bg}
 label-padding = 1
