--- a/linux/polybar/modules/music.ini
+++ b/linux/polybar/modules/music.ini
@@ -4,11 +4,12 @@ tail = true
 interval = 1
 
 format = %{T2}<label>%{T-}
-label-padding-right = 1
-label-foreground = ${colors.bg}
-label-background = ${colors.fg}
-label-overline = ${colors.bg}
-label-underline = ${colors.bg}
+format-padding = 1
+format-foreground = ${colors.bg}
+format-background = ${colors.fg}
+format-overline = ${colors.bg}
+format-underline = ${colors.bg}
+
 exec = ~/.config/polybar/scripts/scroll_music_status.sh
 
 [module/music-prev]
@@ -18,24 +19,29 @@ interval = 1
 exec = if [[ -z $(playerctl -s -l) ]]; then echo ""; else echo "⏮ "; fi
 
 format = <label>
-label-padding-left = 1
-label-foreground = ${colors.bg}
-label-background = ${colors.fg}
-label-overline = ${colors.bg}
-label-underline = ${colors.bg}
+format-padding = 1
+format-foreground = ${colors.bg}
+format-background = ${colors.fg}
+format-overline = ${colors.bg}
+format-underline = ${colors.bg}
 
 click-left = playerctl previous
 
 [module/music-play-pause]
-type = custom/script
-interval = 1
-exec = ~/.config/polybar/scripts/get_music_playing.sh
+type = custom/ipc
+;interval = 0.1
+;exec = ~/.config/polybar/scripts/get_playpause_icon.sh
+;
+hook-0 = echo " "
+hook-1 = echo " "
+hook-2 = echo ""
+initial = 2
 
-format = <label>
-label-foreground = ${colors.bg}
-label-background = ${colors.fg}
-label-overline = ${colors.bg}
-label-underline = ${colors.bg}
+format = <output>
+format-background = ${colors.fg}
+format-foreground = ${colors.bg}
+format-underline  = ${colors.bg}
+format-overline   = ${colors.bg}
 
 click-left = playerctl play-pause
 
@@ -45,7 +51,10 @@ interval = 1
 exec = if [[ -z $(playerctl -s -l) ]]; then echo ""; else echo "⏭ "; fi
 
 format = <label>
-label-foreground = ${colors.bg}
-label-background = ${colors.fg}
-label-overline = ${colors.bg}
-label-underline = ${colors.bg}
+format-padding = 1
+format-foreground = ${colors.bg}
+format-background = ${colors.fg}
+format-overline = ${colors.bg}
+format-underline = ${colors.bg}
+
+click-left = playerctl previous
