--- a/linux/neofetch/config.conf
+++ b/linux/neofetch/config.conf
@@ -9,10 +9,10 @@ print_info() {
     info "Uptime" uptime
     info "Packages" packages
     info "Shell" shell
-    info "Resolution" resolution
+    info "WM" wm
+    info "Terminal" terminal
     info "Terminal Font" term_font
-    info "Memory" memory
-    info "Battery" battery
+    #info "Memory" memory
     # info "Public IP" public_ip
 
     # info "GPU Driver" gpu_driver  # Linux/macOS only
@@ -63,7 +63,7 @@ kernel_shorthand="on"
 # Values:   'on', 'tiny', 'off'
 # Flag:     --distro_shorthand
 # Supports: Everything except Windows and Haiku
-distro_shorthand="off"
+distro_shorthand="on"
 
 # Show/Hide OS Architecture.
 # Show 'x86_64', 'x86' and etc in 'Distro:' output.
@@ -91,7 +91,7 @@ os_arch="on"
 # on:   '2 days, 10 hours, 3 mins'
 # tiny: '2d 10h 3m'
 # off:  '2 days, 10 hours, 3 minutes'
-uptime_shorthand="off"
+uptime_shorthand="tiny"
 
 
 # Memory
@@ -587,7 +587,7 @@ color_blocks="on"
 # Default:  '3'
 # Values:   'num'
 # Flag:     --block_width
-block_width=3
+block_width=1
 
 # Color block height in lines
 #
