improve music module, change font, rearrange modules

--- a/linux/polybar/config.ini
+++ b/linux/polybar/config.ini
@@ -27,7 +27,7 @@ offset-y = 1.2%
 ;width = 99%
 ;offset-x = 0.5%
 
-height = 4.5%
+height = 30pt
 module-margin = 0
 
 line-size = 6px
@@ -38,15 +38,15 @@ wm = bspwm
 wm-restack = bspwm
 override-redirect = true
 
-font-0 = Font Awesome 6 Free:pixelsize=18;4
-font-1 = CMU Typewriter Text:pixelsize=18;4
-font-2 = Font Awesome 6 Free Solid:pixelsize=18;4
-font-3 = Font Awesome 6 Brands:pixelsize=18;4
-font-4 = JetBrainsMonoNL Nerd Font Mono:pixelsize=28;6
+font-0 = Font Awesome 6 Free:pixelsize=16;3
+font-1 = monospace;2
+font-2 = Font Awesome 6 Free Solid:pixelsize=16;3
+font-3 = Font Awesome 6 Brands:pixelsize=16;3
+font-4 = JetBrainsMonoNL Nerd Font Mono:pixelsize=24;5
 
-modules-left = powermenu bspwm
+modules-left = space bspwm space pulseaudio music
 modules-center = date
-modules-right = music-prev music-play-pause music-next music pulseaudio space disk network battery space
+modules-right = disk network battery powermenu
 
 
 [module/space]
