--- a/linux/polybar/modules/music.ini
+++ b/linux/polybar/modules/music.ini
@@ -3,14 +3,15 @@ type = custom/script
 tail = true
 interval = 1
 
-format = %{T2}<label>%{T-}
-format-padding = 1
+format =  %{T2}<label> %{T-}
+format-padding-right = 1
 format-foreground = ${colors.bg}
 format-background = ${colors.fg}
 format-overline = ${colors.bg}
 format-underline = ${colors.bg}
 
 exec = ~/.config/polybar/scripts/scroll_music_status.sh
+click-left = playerctl play-pause
 
 [module/music-prev]
 type = custom/script
