--- a/linux/polybar/modules/volume.ini
+++ b/linux/polybar/modules/volume.ini
@@ -11,21 +11,23 @@ format-volume-overline   = ${colors.bg}
 ;label-volume-padding-right = 1
 
 format-muted = <label-muted>
+;format-muted-foreground = ${colors.bg}
+;format-muted-background = ${colors.red}
 format-muted-foreground = ${colors.bg}
-format-muted-background = ${colors.red}
+format-muted-background = ${colors.fg}
 format-muted-overline   = ${colors.bg}
 format-muted-underline  = ${colors.bg}
 
 label-muted = 
-label-muted-padding-right = 1
-label-muted-padding-left = 15px
+label-muted-padding-right = 12pt
+label-muted-padding-left = 1
 
 ramp-volume-0 = 
-ramp-volume-0-padding-right = 27px
+ramp-volume-0-padding-right = 20pt
 ramp-volume-1 = 
-ramp-volume-1-padding-right = 21px
+ramp-volume-1-padding-right = 16pt
 ramp-volume-2 = 🔊
-ramp-volume-2-padding-right = 12px
+ramp-volume-2-padding-right = 11pt
 ramp-volume-3 = 🔊
-ramp-volume-3-padding-right = 12px
+ramp-volume-3-padding-right = 11pt
 ramp-volume-padding-left = 1
