rearranged modules, better icons, other

--- a/linux/polybar/config.ini
+++ b/linux/polybar/config.ini
@@ -21,7 +21,7 @@ alpha = #00000000
 background = ${colors.bg}
 foreground = ${colors.fg}
 
-offset-y = 1.2%
+offset-y = 8pt
 ;radius = 10
 
 ;width = 99%
@@ -30,7 +30,14 @@ offset-y = 1.2%
 height = 30pt
 module-margin = 0
 
-line-size = 6px
+line-size = 3pt
+
+border-bottom-size = 4pt
+border-bottom-color = ${colors.bg}
+border-top-size = 4pt
+border-top-color = ${colors.bg}
+border-left-size = 4pt
+border-left-color = ${colors.bg}
 
 enable-ipc = true
 
@@ -43,8 +50,10 @@ font-1 = monospace;2
 font-2 = Font Awesome 6 Free Solid:pixelsize=16;3
 font-3 = Font Awesome 6 Brands:pixelsize=16;3
 font-4 = JetBrainsMonoNL Nerd Font Mono:pixelsize=24;5
+font-5 = JetBrainsMonoNL Nerd Font Mono:pixelsize=16;2
+font-6 = JetBrainsMonoNL Nerd Font Mono:pixelsize=12;2
 
-modules-left = space bspwm space pulseaudio music
+modules-left = bspwm space pulseaudio music
 modules-center = date
 modules-right = disk network battery powermenu
 
