--- a/linux/polybar/modules/battery.ini
+++ b/linux/polybar/modules/battery.ini
@@ -9,32 +9,34 @@ adapter = ADP1
 
 poll-interval = 1
 
-format-charging = <ramp-capacity> <label-charging>
-format-charging-background = ${colors.cyan}
+; temporary ugly fix since there is no 
+; custom ramp-x implementation
+format-charging = %{T6}<ramp-capacity>%{T-}%{T7}󱐋%{T-}
+format-charging-background = ${colors.fg}
 format-charging-foreground = ${colors.bg}
-format-charging-underline  = ${colors.bg} 
-format-charging-overline   = ${colors.bg} 
+;format-charging-underline  = ${colors.bg} 
+;format-charging-overline   = ${colors.bg} 
 format-charging-padding = 1
 
-format-discharging = <ramp-capacity> <label-discharging>
-format-discharging-background = ${colors.yellow}
+format-discharging = %{T6}<ramp-capacity>%{T-}
+format-discharging-background = ${colors.fg}
 format-discharging-foreground = ${colors.bg}
-format-discharging-underline  = ${colors.bg} 
-format-discharging-overline   = ${colors.bg}
+;format-discharging-underline  = ${colors.bg} 
+;format-discharging-overline   = ${colors.bg}
 format-discharging-padding = 1
 
-format-full = <ramp-capacity> <label-full>
-format-full-background = ${colors.green}
+format-full = %{T6}<ramp-capacity>%{T-}
+format-full-background = ${colors.fg}
 format-full-foreground = ${colors.bg}
-format-full-underline  = ${colors.bg} 
-format-full-overline   = ${colors.bg} 
+;format-full-underline  = ${colors.bg} 
+;format-full-overline   = ${colors.bg} 
 format-full-padding = 1
 
-format-low = <animation-low>
-format-low-background = ${colors.red}
+format-low = %{T6}<animation-low>%{T-}
+format-low-background = ${colors.fg}
 format-low-foreground = ${colors.bg}
-format-low-underline  = ${colors.bg} 
-format-low-overline   = ${colors.bg} 
+;format-low-underline  = ${colors.bg} 
+;format-low-overline   = ${colors.bg} 
 format-low-padding = 1
 
 label-charging = %{T2}%percentage%%{T-}
@@ -43,15 +45,30 @@ label-discharging = %{T2}%percentage%%{T-}
 
 label-full = %{T2}Full!%{T-}
 
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
+ramp-capacity-0 = 󰁺
+ramp-capacity-1 = 󰁻
+ramp-capacity-2 = 󰁼
+ramp-capacity-3 = 󰁽
+ramp-capacity-4 = 󰁾
+ramp-capacity-5 = 󰁿
+ramp-capacity-6 = 󰂀
+ramp-capacity-7 = 󰂁
+ramp-capacity-8 = 󰂂
+ramp-capacity-9 = 󰁹
 
-animation-low-0 = 
-animation-low-0-padding-left = 15px
-animation-low-1 = 
-animation-low-1-padding-left = 1
+; maybe in the future :(
+;ramp-charging-0 = 󰢜
+;ramp-charging-1 = 󰂆
+;ramp-charging-2 = 󰂇
+;ramp-charging-3 = 󰂈
+;ramp-charging-4 = 󰂈
+;ramp-charging-5 = 󰂈
+;ramp-charging-6 = 󰢞
+;ramp-charging-7 = 󰂊
+;ramp-charging-8 = 󰂋
+;ramp-charging-9 = 󰂅
+
+animation-low-0 = 󰂎
+animation-low-1 = 󰂃
 animation-low-framerate = 500
-animation-low-padding-right = 1
+animation-low-padding = 1
