--- a/linux/polybar/modules/bspwm.ini
+++ b/linux/polybar/modules/bspwm.ini
@@ -10,25 +10,24 @@ ws-icon-default = "%{T1} 🌲 %{T-}"
 ;ws-icon-3 = "IV;%{T1} 🌲 %{T-}"
 
 format = <label-state>
-format-foreground = ${colors.fg}
 
 label-focused = %icon%
 label-focused-padding = 0
 label-focused-foreground = ${colors.bg}
 label-focused-background = ${colors.fg}
 label-focused-underline = ${colors.bg}
-label-focused-overline = ${colors.bg}
+;label-focused-overline = ${colors.fg}
 
 label-occupied = %icon%
 label-occupied-padding = 0
-label-occupied-foreground = ${colors.fg}
-label-occupied-background = ${colors.bg}
-label-occupied-underline = ${colors.bg}
-label-occupied-overline = ${colors.bg}
+label-occupied-foreground = ${colors.bg}
+label-occupied-background = ${colors.fg}
+;label-occupied-underline = ${colors.bg}
+;label-occupied-overline = ${colors.bg}
 
 label-empty = %icon%
 label-empty-padding = 0
-label-empty-foreground = #55
-label-empty-background = ${colors.bg}
-label-empty-underline = ${colors.bg}
-label-empty-overline = ${colors.bg}
+label-empty-foreground = #55[${colors.bg}]
+label-empty-background = ${colors.fg}
+;label-empty-underline = ${colors.bg}
+;label-empty-overline = ${colors.bg}
