--- a/linux/polybar/modules/disk.ini
+++ b/linux/polybar/modules/disk.ini
@@ -6,6 +6,6 @@ exec=echo " $(df -h | grep "/dev/sda2" | awk '{print $5}')"
 format=%{T2}<label>%{T-}
 label-foreground = ${colors.bg}
 label-background = ${colors.fg}
-label-underline  = ${colors.bg}
-label-overline   = ${colors.bg}
+;label-underline  = ${colors.bg}
+;label-overline   = ${colors.bg}
 label-padding = 1
