--- a/linux/polybar/modules/music.ini
+++ b/linux/polybar/modules/music.ini
@@ -3,12 +3,12 @@ type = custom/script
 tail = true
 interval = 1
 
-format =  %{T2}<label> %{T-}
-format-padding-right = 1
+format = %{T2}<label>%{T-}
 format-foreground = ${colors.bg}
 format-background = ${colors.fg}
-format-overline = ${colors.bg}
-format-underline = ${colors.bg}
+;format-overline = ${colors.bg}
+;format-underline = ${colors.bg}
+label-padding-right = 1
 
 exec = ~/.config/polybar/scripts/scroll_music_status.sh
 click-left = playerctl play-pause
@@ -23,8 +23,8 @@ format = <label>
 format-padding = 1
 format-foreground = ${colors.bg}
 format-background = ${colors.fg}
-format-overline = ${colors.bg}
-format-underline = ${colors.bg}
+;format-overline = ${colors.bg}
+;format-underline = ${colors.bg}
 
 click-left = playerctl previous
 
@@ -41,8 +41,8 @@ initial = 2
 format = <output>
 format-background = ${colors.fg}
 format-foreground = ${colors.bg}
-format-underline  = ${colors.bg}
-format-overline   = ${colors.bg}
+;format-underline  = ${colors.bg}
+;format-overline   = ${colors.bg}
 
 click-left = playerctl play-pause
 
@@ -55,7 +55,7 @@ format = <label>
 format-padding = 1
 format-foreground = ${colors.bg}
 format-background = ${colors.fg}
-format-overline = ${colors.bg}
-format-underline = ${colors.bg}
+;format-overline = ${colors.bg}
+;format-underline = ${colors.bg}
 
 click-left = playerctl previous
