--- a/linux/polybar/modules/network.ini
+++ b/linux/polybar/modules/network.ini
@@ -9,24 +9,24 @@ unknown-as-up = true
 
 ;format-connected = <ramp-signal><label-connected>
 format-connected = <ramp-signal>
-format-connected-overline   = ${colors.bg}
-format-connected-underline  = ${colors.bg}
+;format-connected-overline   = ${colors.bg}
+;format-connected-underline  = ${colors.bg}
 format-connected-background = ${colors.fg}
 format-connected-foreground = ${colors.bg}
 format-connected-padding = 1
 
 format-disconnected = <label-disconnected>
-format-disconnected-background = ${colors.red}
+format-disconnected-background = ${colors.fg}
 format-disconnected-foreground = ${colors.bg}
-format-disconnected-underline  = ${colors.bg}
-format-disconnected-overline   = ${colors.bg}
+;format-disconnected-underline  = ${colors.bg}
+;format-disconnected-overline   = ${colors.bg}
 format-disconnected-padding = 1
 
 label-connected = %{T2}%downspeed%%{T-}
 
 label-disconnected = %{T5}󰤭%{T-}
 
-;ramp-signal-0 = %{T5}󰤯 %{T-}
+;ramp-signal-0 = %{T6}󰤯 %{T-}
 ramp-signal-0 = %{T5}󰤟%{T-}
 ramp-signal-1 = %{T5}󰤢%{T-}
 ramp-signal-2 = %{T5}󰤥%{T-}
