--- a/linux/polybar/modules/volume.ini
+++ b/linux/polybar/modules/volume.ini
@@ -4,8 +4,8 @@ type = internal/pulseaudio
 format-volume = <ramp-volume>
 format-volume-background = ${colors.fg}
 format-volume-foreground = ${colors.bg}
-format-volume-underline  = ${colors.bg}
-format-volume-overline   = ${colors.bg}
+;format-volume-underline  = ${colors.bg}
+;format-volume-overline   = ${colors.bg}
 
 ;label-volume = %{T2}%percentage%%{T-}
 ;label-volume-padding-right = 1
@@ -15,8 +15,8 @@ format-muted = <label-muted>
 ;format-muted-background = ${colors.red}
 format-muted-foreground = ${colors.bg}
 format-muted-background = ${colors.fg}
-format-muted-overline   = ${colors.bg}
-format-muted-underline  = ${colors.bg}
+;format-muted-overline   = ${colors.bg}
+;format-muted-underline  = ${colors.bg}
 
 label-muted = 
 label-muted-padding-right = 12pt
