use dot icon for empty/occupied workspaces

--- a/linux/polybar/modules/bspwm.ini
+++ b/linux/polybar/modules/bspwm.ini
@@ -3,7 +3,7 @@ type = internal/bspwm
 
 enable-scroll = false
 
-ws-icon-default = "%{T1} 🌲 %{T-}"
+ws-icon-default = "%{T1}%{T-}"
 ;ws-icon-0 = "I;%{T1} 🌲 %{T-}"
 ;ws-icon-1 = "II;%{T1} 🌲 %{T-}"
 ;ws-icon-2 = "III;%{T1} 🌲 %{T-}"
@@ -11,23 +11,23 @@ ws-icon-default = "%{T1} 🌲 %{T-}"
 
 format = <label-state>
 
-label-focused = %icon%
-label-focused-padding = 0
+label-focused = 🌲
+label-focused-padding = 1
 label-focused-foreground = ${colors.bg}
 label-focused-background = ${colors.fg}
 label-focused-underline = ${colors.bg}
 ;label-focused-overline = ${colors.fg}
 
 label-occupied = %icon%
-label-occupied-padding = 0
+label-occupied-padding = 1
 label-occupied-foreground = ${colors.bg}
 label-occupied-background = ${colors.fg}
 ;label-occupied-underline = ${colors.bg}
 ;label-occupied-overline = ${colors.bg}
 
 label-empty = %icon%
-label-empty-padding = 0
-label-empty-foreground = #55[${colors.bg}]
+label-empty-padding = 1
+label-empty-foreground = ${colors.bg}
 label-empty-background = ${colors.fg}
 ;label-empty-underline = ${colors.bg}
 ;label-empty-overline = ${colors.bg}
