display more info; separate disk, network, battery; fix padding

--- a/linux/polybar/config.ini
+++ b/linux/polybar/config.ini
@@ -55,7 +55,7 @@ font-6 = JetBrainsMonoNL Nerd Font Mono:pixelsize=12;2
 
 modules-left = bspwm space pulseaudio music
 modules-center = date
-modules-right = disk network battery powermenu
+modules-right = disk space network space battery powermenu
 
 
 [module/space]
