--- a/linux/polybar/modules/battery.ini
+++ b/linux/polybar/modules/battery.ini
@@ -11,39 +11,38 @@ poll-interval = 1
 
 ; temporary ugly fix since there is no 
 ; custom ramp-x implementation
-format-charging = %{T6}<ramp-capacity>%{T-}%{T7}󱐋%{T-}
+format-charging = %{T6}<ramp-capacity>%{T-}%{T7}󱐋%{T-} <label-charging>
 format-charging-background = ${colors.fg}
 format-charging-foreground = ${colors.bg}
 ;format-charging-underline  = ${colors.bg} 
 ;format-charging-overline   = ${colors.bg} 
 format-charging-padding = 1
 
-format-discharging = %{T6}<ramp-capacity>%{T-}
+format-discharging = %{T6}<ramp-capacity>%{T-} <label-discharging>
 format-discharging-background = ${colors.fg}
 format-discharging-foreground = ${colors.bg}
 ;format-discharging-underline  = ${colors.bg} 
 ;format-discharging-overline   = ${colors.bg}
 format-discharging-padding = 1
 
-format-full = %{T6}<ramp-capacity>%{T-}
+format-full = %{T6}<ramp-capacity>%{T-} <label-full>
 format-full-background = ${colors.fg}
 format-full-foreground = ${colors.bg}
 ;format-full-underline  = ${colors.bg} 
 ;format-full-overline   = ${colors.bg} 
 format-full-padding = 1
 
-format-low = %{T6}<animation-low>%{T-}
+format-low = %{T6}<animation-low>%{T-} <label-low>
 format-low-background = ${colors.fg}
 format-low-foreground = ${colors.bg}
 ;format-low-underline  = ${colors.bg} 
 ;format-low-overline   = ${colors.bg} 
 format-low-padding = 1
 
-label-charging = %{T2}%percentage%%{T-}
-
-label-discharging = %{T2}%percentage%%{T-}
-
-label-full = %{T2}Full!%{T-}
+label-charging    = %{T2}%percentage%%%{T-}
+label-discharging = %{T2}%percentage%%%{T-}
+label-full 	  = %{T2}Full!%{T-}
+label-low 	  = %{T2}%percentage%%%{T-}
 
 ramp-capacity-0 = 󰁺
 ramp-capacity-1 = 󰁻
@@ -71,4 +70,3 @@ ramp-capacity-9 = 󰁹
 animation-low-0 = 󰂎
 animation-low-1 = 󰂃
 animation-low-framerate = 500
-animation-low-padding = 1
