--- a/linux/polybar/modules/music.ini
+++ b/linux/polybar/modules/music.ini
@@ -8,7 +8,7 @@ format-foreground = ${colors.bg}
 format-background = ${colors.fg}
 ;format-overline = ${colors.bg}
 ;format-underline = ${colors.bg}
-label-padding-right = 1
+label-padding = 1
 
 exec = ~/.config/polybar/scripts/scroll_music_status.sh
 click-left = playerctl play-pause
