--- a/linux/polybar/modules/network.ini
+++ b/linux/polybar/modules/network.ini
@@ -7,8 +7,8 @@ interface-type = wireless
 accumulate-stats = true
 unknown-as-up = true
 
-;format-connected = <ramp-signal><label-connected>
-format-connected = <ramp-signal>
+format-connected = <ramp-signal> <label-connected>
+;format-connected = <ramp-signal>
 ;format-connected-overline   = ${colors.bg}
 ;format-connected-underline  = ${colors.bg}
 format-connected-background = ${colors.fg}
