--- a/linux/polybar/modules/volume.ini
+++ b/linux/polybar/modules/volume.ini
@@ -1,16 +1,17 @@
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume = <ramp-volume>
+format-volume = <ramp-volume> <label-volume>
+format-volume-padding = 1
 format-volume-background = ${colors.fg}
 format-volume-foreground = ${colors.bg}
 ;format-volume-underline  = ${colors.bg}
 ;format-volume-overline   = ${colors.bg}
 
-;label-volume = %{T2}%percentage%%{T-}
-;label-volume-padding-right = 1
+label-volume = %{T2}%percentage%%%{T-}
 
-format-muted = <label-muted>
+format-muted = <label-muted> %{T2}shh%{T-}
+format-muted-padding = 1
 ;format-muted-foreground = ${colors.bg}
 ;format-muted-background = ${colors.red}
 format-muted-foreground = ${colors.bg}
@@ -18,16 +19,12 @@ format-muted-background = ${colors.fg}
 ;format-muted-overline   = ${colors.bg}
 ;format-muted-underline  = ${colors.bg}
 
-label-muted = 
-label-muted-padding-right = 12pt
-label-muted-padding-left = 1
+label-muted =  
+label-muted-padding-right = 2pt
 
 ramp-volume-0 = 
-ramp-volume-0-padding-right = 20pt
+ramp-volume-0-padding-right = 9pt
 ramp-volume-1 = 
-ramp-volume-1-padding-right = 16pt
+ramp-volume-1-padding-right = 5.5pt
 ramp-volume-2 = 🔊
-ramp-volume-2-padding-right = 11pt
 ramp-volume-3 = 🔊
-ramp-volume-3-padding-right = 11pt
-ramp-volume-padding-left = 1
