--- a/macos/alacritty/alacritty.toml
+++ b/macos/alacritty/alacritty.toml
@@ -1,4 +1,3 @@
-live_config_reload = true
 
 [bell]
 animation = "EaseOutExpo"
@@ -98,3 +97,6 @@ title = "Terminal"
 [window.padding]
 x = 10
 y = 10
+
+[general]
+live_config_reload = true
